style(icons.mdx): organize and update the icons in the storybook file feat(icons.mdx): add new social media icons (Instagram, Soundcloud, Spotify, Thread, Tiktok) to the storybook for display and usage on the website

--- a/src/stories/icons.mdx
+++ b/src/stories/icons.mdx
@@ -1,48 +1,59 @@
-{/* // import { Meta, IconGallery, IconItem } from "@storybook/blocks"
+import { Meta, IconGallery, IconItem } from "@storybook/blocks"
 
-// import { MenuIcon, TicketIcon } from "lucide-react";
-// import Facebook from "@/lib/components/icons/facebook"
+import { MenuIcon, TicketIcon } from "lucide-react";
+import Facebook from "@/lib/components/icons/facebook"
+import Instagram from "@/lib/components/icons/instagram"
+import Soundcloud from "@/lib/components/icons/soundcloud"
+import Spotify from "@/lib/components/icons/spotify"
+import Thread from "@/lib/components/icons/thread"
+import Tiktok from "@/lib/components/icons/tiktok"
+import Twitter from "@/lib/components/icons/twitter"
+import Youtube from "@/lib/components/icons/youtube"
 
-// <Meta title="Theme/Icons" />
+<Meta title="Icons/Icons" />
 
-// # Icons
+# Icons
 
-// **Basic icons**
+**Basic icons**
+<hr />
+*These are the icons we use on the website if you need more please check on [lucide.dev](https://lucide.dev) website and add theme here*
 
-// <IconGallery>
-//   <IconItem name="Menu">
-//     <MenuIcon className="text-white" />
-//   </IconItem>
-//   <IconItem name="TicketIcon">
-//     <TicketIcon className="text-white" />
-//   </IconItem>
-// </IconGallery>
+<IconGallery>
+  <IconItem name="Menu">
+    <MenuIcon className="text-white" />
+  </IconItem>
+  <IconItem name="Ticket">
+    <TicketIcon className="text-white" />
+  </IconItem>
+</IconGallery>
 
-// **Socials icons**
+**Socials icons**
+<hr />
+<br />
 
-// <IconGallery>
-//   <IconItem name="Facebook">
-//     <Facebook />
-//   </IconItem>
-//   <IconItem name="Instagram">
-//     <Instagram />
-//   </IconItem>
-//   <IconItem name="Soundcloud">
-//     <Soundcloud />
-//   </IconItem>
-//   <IconItem name="Spotify">
-//     <Spotify />
-//   </IconItem>
-//   <IconItem name="Thread">
-//     <Thread />
-//   </IconItem>
-//   <IconItem name="Tiktok">
-//     <Tiktok />
-//   </IconItem>
-//   <IconItem name="Twitter">
-//     <Twitter />
-//   </IconItem>
-//   <IconItem name="Youtube">
-//     <Youtube />
-//   </IconItem>
-// </IconGallery> */}
+<IconGallery>
+  <IconItem name="Facebook">
+    <Facebook className="text-white" />
+  </IconItem>
+  <IconItem name="Instagram">
+    <Instagram className="text-white" />
+  </IconItem>
+  <IconItem name="Soundcloud">
+    <Soundcloud className="text-white" />
+  </IconItem>
+  <IconItem name="Spotify">
+    <Spotify className="text-white" />
+  </IconItem>
+  <IconItem name="Thread">
+    <Thread className="text-white" />
+  </IconItem>
+  <IconItem name="Tiktok">
+    <Tiktok className="text-white" />
+  </IconItem>
+  <IconItem name="Twitter">
+    <Twitter className="text-white" />
+  </IconItem>
+  <IconItem name="Youtube">
+    <Youtube className="text-white" />
+  </IconItem>
+</IconGallery>
