feat(package.json): add "polished" package to dependencies for styling purposes
feat(typeset.tsx): create a new Typeset component for displaying type examples with different sizes, weights, and configurable sample text

feat(typographie.mdx): import and use the newly created Typeset component in the typographie story for showcasing different font styles

--- a/src/stories/typographie.mdx
+++ b/src/stories/typographie.mdx
@@ -1,4 +1,5 @@
-import {Meta, Typeset} from "@storybook/blocks"
+import { Meta } from "@storybook/blocks"
+import { Typeset } from "./typeset"
 
 <Meta title="Theme/Typographie" />
 
@@ -68,6 +69,7 @@ export const SampleText = "Welcome to the festival Les CuicuiteDays !";
   fontWeight={montserrat.weight.black}
   sampleText={SampleText}
   fontFamily={montserrat.type.primary}
+  textColor="#F9FAFF"
 />
 
 **Font :** Magic Retro
@@ -89,4 +91,5 @@ export const SampleText = "Welcome to the festival Les CuicuiteDays !";
   fontWeight={magicRetro.weight.black}
   sampleText={SampleText}
   fontFamily={magicRetro.type.primary}
+  textColor="#F9FAFF"
 />
